static/students.css
/* LAYOUT + GENERAL ATTRIBUTES ================================ */
body {
	width: 1280px;
	height: 751px;
}

#header,
#footer {
	width: 100%;
	overflow: hidden;
}

#footer {
	position: absolute;
	bottom: 0;
}

#main {
	height: 632px; /* 751 - 2*60 + 1 = body height - #header height - #footer height */
}

#question,
#answers,
#overview {
	float: left;
	padding: 1.7em;
	height: 598px;  /* 632 - 2*17 = #main height - #question padding */
}
#answers {
	height: 537px;
}

#question {	width: 690px; }
#answers { width: 521px; } /* 1280 - 690 - 4*17 - 1 = body width - #question width - 2*#question padding - 2*#answers padding - #question border-right */
#overview { width: 1246px; } /* 1280 - 2*17 - 1 = body width - 2*#overview padding */

/* extended situation (no bars) */
#header.hide,
#footer.hide {
	height: 0;
}
#main.hide {
	height: 750px; /* body height - 1 */
}
#main.hide #question,
#main.hide #answers,
#main.hide #overview {
	height: 716px; /* 750 - 2*17 = body height - 2*#question padding */
}
#main.hide #answers {
	height: 656px;
}


/* MARKUP ===================================================== */
/* general elements*/
body {
	font: 62.5%/1.0 Helvetica, Arial, Verdana, sans-serif;
	position: relative;
	background: #fff;
	margin: 0;
	color: #000;
}

a {
	color: #000;
	text-decoration: none;
}

a:hover {
	color: #fff;
	background: #000;
}

em { font-style: italic; }
strong { font-weight: bold; }
sup { font-size: 75%; vertical-align: super; line-height: 0; }
sub { font-size: 75%; vertical-align: sub; }

p { font-size: 1.7em;
	line-height: 1.35em;
	margin-bottom: 0.7em; }

h1 { font-size: 2em;
	margin: 0.5em 0 0.1em 0; }

body.zoom p,
body.zoom ul,
body.zoom .log table td,
body.zoom .log table th {
	font-size: 2.0em;
	line-height: 1.4em;
	margin-bottom: 0.8em;
}

hr { margin: 2em 0; clear: both; }

select {
	font-weight: bold;
	border: 1px solid #ccc;
	background: #fff;
	font-size: 100%;
	color: #000;
}

ul {
	list-style: disc;
	margin: 0 2em 0.7em 2em;
	font-size: 1.7em;
	line-height: 1.4em;
}


/* Header */
#header {
	background: #000;
	color: #fff;
	font-size: 2.2em;
	font-weight: bold;
}

#header .title {
	float: left;
	padding: 12px 12px 13px 12px;
}

#header .infobox {
	float: right;
	font-size: 75%;
	padding: 21px 21px 22px 21px;
}

/* Navigation bar */
#footer {
	background: #000;
	text-align: center;
}

#footer a {
	height: 60px;
	width: 6em;
	display: inline-block;
	margin: 0 1em -2px 1em;
	padding: 0 2em;
}

#footer a.prev { background: url('icons/prev.png') no-repeat center center; }
#footer a.home { background: url('icons/home.png') no-repeat center center; }
#footer a.font { background: url('icons/font.png') no-repeat center center; }
#footer a.next { background: url('icons/next.png') no-repeat center center; }
#footer a:hover { background-color: #ccc; }

/* Main elements: question & answer page */
#question {
	overflow-y: scroll;
	overflow-x: hidden;
	border-right: 1px solid #999;
}

#question p:first-child {
	margin: -1em -1em 1em -1em;
	padding: 0.5em 1em;
	color: #000;
	background: #ccc;
	font-weight: bold;
}

#question img {
	padding: 0.5em 0;
	width: 25%;
	transition: all 200ms ease;
}

#question img.large {
	width: 100%;
	transition: all 200ms ease;
}

#question img:hover {
	cursor: pointer;
}

#answers {
	/*overflow-y: scroll;
	overflow-x: hidden;*/
}

#answers > p { font-weight: bold; }

#answers table {
	width: 100%;
	height: 454px;
}

#answers th {
	font-weight: bold;
	height: 35px;
	white-space: nowrap;
}

#answers td {
	vertical-align: top;
}
#answers td:first-child,
#answers th:first-child {
	padding-right: 2em;
	text-align: left;
}

#answers.hide table {
	height: 514px;
}
#answers.hide > p { padding-top: 20px; padding-bottom: 20px; }
#answers.hide th { height: 50px; }
body.zoom #answers table {
	height: 410px;
}
body.zoom #answers.hide table {
	height: 492px;
}

/* Main elements: overview page */
#overview {
	padding: 1.7em;
	overflow-y: scroll;
}

#overview p {
	margin: 0;
}

#overview a {
	font-size: 1.3em;
	display: inline-block;
	padding: 5px 30px 38px 5px;
	width: 30px;
	border: 1px solid #bbb;
	margin: 5px 10px 5px 0;
	color: #000; /* default color for unvisited questions */
	background: #eee;
}

#overview a.done { color: #eee; background: #03a0e1; } /* done */
#overview a.need { color: #000; background: url('icons/half.png') no-repeat right bottom #eee; background-size: 65px; }

#overview a.empt.flag { color: #000; background: url('icons/flagdark.png') no-repeat right bottom #eee; background-size: 35px; }
#overview a.done.flag { color: #eee; background: url('icons/flag.png') no-repeat right bottom #03a0e1; background-size: 35px; }
#overview a.need.flag { color: #000; background: url('icons/halfflag.png') no-repeat right bottom #eee; background-size: 65px; }

#overview a:hover,
#overview a.done.flag:hover,
#overview a.need.flag:hover {
	background: #000;
	color: #fff;
}

body.zoom #overview a {
	width: 35px;
}
body.zoom #overview a.need {
	background-size: 70px;
}
body.zoom #overview a.done.flag {
	background-size: 37px;
}

/* IBO logo */
.ibologo {
	position: absolute;
	right: 0;
	bottom: 0;
}
.ibologo:hover {
	cursor: pointer;
}
.ibologo img {
	height: 20px;
	padding: 20px 20px;
}

/* Clock for countdown */
#clock {
	position: absolute;
	left: 0;
	bottom: 0;
	color: #fff;
	font-size: 300%;
	padding: 16px;
}

#clock.hide {
	display: none;
}

/* True / False */
#answers input {
	display: none;
}

#answers label {
	float: right;
}
#answers td:last-child label {
	float: left;
}

#answers th,
#answers td {
	text-align: right;
}

#answers th:first-child,
#answers th:last-child,
#answers td:first-child,
#answers td:last-child {
	text-align: left;
}

#answers th:last-child,
#answers td:last-child {
	padding-left: 20px;
	padding-right: 10px;
}

#answers div {
	width: 48px;
	height: 48px;
	text-align: center;
	border: 2px solid #333;
	cursor: pointer;
	border-radius: 50px;
}

#answers input:checked + label div {
	background-image: url('icons/tick.png');
	background-color: #999;
}

#answers td:last-child input:checked:first-child + label div {
	background-image: url('icons/tick.png');
	background-color: #999;
}

/* Answer bar (mini-menu) */
#answerbar {
	float: right;
	width: 555px;
	height: 60px;
	background: #ccc;
	text-align: center;
	border-radius: 0;
	border: 0;
	cursor: auto;
}

#answerbar.hide {
	top: 691px;
	padding-right: 150px;
	width: 405px;
}

#answerbar a:first-child,
#answerbar a:last-child {
	display: none;
}

#answerbar.hide a:first-child,
#answerbar.hide a:last-child {
	display: inline-block;
}

#answerbar a {
	display: inline-block;
	height: 6em;
	width: 10em;
}

#answerbar a.prev { background: url('icons/prev.png') center center no-repeat; }
#answerbar a.next { background: url('icons/next.png') center center no-repeat; }

#answerbar a:hover {
	background-color: #555;
	cursor: pointer;
}

#answerbar input {
	display: none;
}
#answerbar label {
	float: none;
	display: inline-block;
	cursor: pointer;
	height: 6em;
	width: 10em;
}
#answerbar #id_flag + label {
	background: url('icons/flag.png') no-repeat center;	
}
#answerbar #id_flag + label:hover {
	background-color: #555;
}
#answerbar #id_flag:checked + label {
	background: #eabf03 url('icons/flag.png') no-repeat center;
}


/* MEDIA QUERIES ============================================== */
@media only screen and (orientation: portrait) {
body {
	width: 800px;
	height: 1231px;
}

#main {
	height: 1112px; /* body height - 120 + 1 */
}

#question {
	width: 766px; /* body width - 34 */
	height: 520px;
	overflow-y: none;
	border-right: none;
	border-bottom: 1px solid #999;
}

#answers {
	width: 766px;
	height: 462px;
}

#answers table {
	height: 404px;
}

#overview {
	height: 1082px;
	width: 766px;
}

/* hidden stuff */
#main.hide {
	height: 1235px;
}

#main #answers #answerbar {
	padding-right: 0;
	width: 800px;
	left: 0;
	top: 840px;
}

#main.hide #overview {
	height: 1201px;
}

#main.hide #question {
	height: 580px;
}

#main.hide #answers {
	height: 522px;
}

#main.hide #answers table {
	height: 425px;
}

#main.hide #answers #answerbar {
	top: 900px;
}

}

